fixed spacing

--- a/assets/css/byo1.css
+++ b/assets/css/byo1.css
@@ -50,7 +50,7 @@
 }
 
 .byo1-heading{
-  margin-left:50px;
+  /*margin-left:50px;*/
 }
 
 .view-details{
